--- a/datelibrary/src/main/res/values/strings.xml
+++ b/datelibrary/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DateLibrary</string>
+    <string name="sure">确定</string>
+    <string name="please_input_room_name">请输入房间名</string>
+    <string name="please_input_room_desc">请输入房间描述</string>
 </resources>
